# qchip8

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cpu.cpp  cpu.h  datatypes.h  emulatorworker.cpp  emulatorworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  opcodeinterpreter.cpp  opcodeinterpreter.h  registerset.cpp  registerset.h
.github/workflows/: build.yml
compiler/: CMakeLists.txt
compiler/chip8c/: CMakeLists.txt
compiler/chip8c/src/: main.cpp
compiler/includes/: ast.hpp  lexer.h  lexer.hpp  parser.hpp  parser_error_state.hpp
compiler/lib/: CMakeLists.txt
compiler/lib/includes/: ast.hpp  astvisitor.hpp  lexer.hpp  parser.hpp  parser_error_state.hpp
compiler/lib/src/: ast.cpp  astvisitor.cpp  lexer.cpp  parser.cpp  parser_error_state.cpp
compiler/src/: ast.cpp  astvisitor.cpp  lexer.cpp  parser.cpp  parser_error_state.cpp
compiler/tests/: CMakeLists.txt
compiler/tests/src/: lexer_tests.cpp  parser_tests.cpp
emulator/: CMakeLists.txt
emulator/includes/: cpu.h  datatypes.h  editorwindow.h  emulatorworker.h  is.h  mainwindow.h  memory.h  registerset.h
emulator/src/: cpu.cpp  editorwindow.cpp  editorwindow.ui  is.cpp  mainwindow.cpp  mainwindow.ui  memory.cpp  registerset.cpp
includes/: cpu.h  datatypes.h  emulatorworker.h  is.h  mainwindow.h  registerset.h
src/: cpu.cpp  emulatorworker.cpp  is.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  memory.cpp  registerset.cpp
