CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(PROJECT_NAME chip8c)
PROJECT(${PROJECT_NAME})

SET(CMAKE_CXX_STANDARD 17)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

INCLUDE_DIRECTORIES(external)

ADD_EXECUTABLE(${PROJECT_NAME}
 src/main.cpp
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC "../lib/includes")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} compiler_lib)
