CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(PROJECT_NAME tests)
PROJECT(${PROJECT_NAME})

SET(CMAKE_CXX_STANDARD 17)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

INCLUDE_DIRECTORIES(external)

ADD_EXECUTABLE(${PROJECT_NAME}
 external/catch2/catch2.cpp
 src/lexer_tests.cpp
 src/parser_tests.cpp
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} compiler)
